--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,6 +131,7 @@
     <div id="toastContainer" class="toast-container"></div>
 
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/auth.js"></script>
     <script src="assets/js/user.js"></script>
     <script src="assets/js/analytics.js"></script>
     <script src="assets/js/user-background.js"></script>
