Added : Loader with queue

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
     <div id="auth-section" class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
+                <div class="auth-logo">
+                    <img src="assets/images/logo-landscape.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
+                </div>
                 <h1 class="auth-title">MCA 2025</h1>
                 <p class="auth-subtitle">Marmeto Choice Awards</p>
             </div>
@@ -62,6 +65,9 @@
     <div id="admin-dashboard" class="admin-layout hidden">
         <nav class="sidebar">
             <div class="sidebar-header">
+                <div class="sidebar-logo">
+                    <img src="assets/images/logo-square.png" alt="MCA Logo" onerror="this.style.display='none'">
+                </div>
                 <h2 class="sidebar-title">MCA Admin</h2>
                 <p class="sidebar-subtitle">Welcome, <span id="adminName">admin@marmeto.com</span></p>
             </div>
@@ -110,6 +116,9 @@
     <!-- User Section -->
     <div id="user-dashboard" class="user-container hidden">
         <div class="user-header">
+            <div class="user-logo">
+                <img src="assets/images/logo-landscape.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
+            </div>
             <h1 class="user-title">MCA 2025 Voting</h1>
             <p class="user-subtitle">Cast your vote for the Marmeto Choice Awards</p>
             <button class="btn btn-secondary" id="userLogout">Logout</button>
