Added : Loader with queue

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,7 +66,7 @@
         <nav class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="assets/images/logo-square.png" alt="MCA Logo" onerror="this.style.display='none'">
+                    <img src="assets/images/logo-square.png" alt="MCA Admin Logo" onerror="this.style.display='none'">
                 </div>
                 <h2 class="sidebar-title">MCA Admin</h2>
                 <p class="sidebar-subtitle">Welcome, <span id="adminName">admin@marmeto.com</span></p>
