--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
     <div id="auth-section" class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <div class="auth-logo">
-                    <img src="assets/images/logo-landscape.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
+                <div class="auth-logo square">
+                    <img src="assets/images/logo-square.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
                 </div>
             </div>
             
