Added : Loader with queue

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
         <nav class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="assets/images/logo-landscape.png" alt="MCA Logo" onerror="this.style.display='none'">
+                    <img src="assets/images/logo-square.png" alt="MCA Logo" onerror="this.style.display='none'">
                 </div>
                 <h2 class="sidebar-title">MCA Admin</h2>
                 <p class="sidebar-subtitle">Welcome, <span id="adminName">admin@marmeto.com</span></p>
@@ -115,10 +115,9 @@
     <div id="user-dashboard" class="user-container hidden">
         <div class="user-header">
             <div class="user-logo">
-                <img src="assets/images/logo-landscape.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
+                <img src="assets/images/logo-square.png" alt="MCA 2025 Logo" onerror="this.style.display='none'">
             </div>
-            <h1 class="user-title">MCA 2025 Voting</h1>
-            <p class="user-subtitle">Cast your vote for the Marmeto Choice Awards</p>
+            <h1 class="user-title">MCA 2025</h1>
             <button class="btn btn-secondary" id="userLogout">Logout</button>
         </div>
         
