--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,7 +114,7 @@
     <!-- User Section -->
     <div id="user-dashboard" class="user-container hidden">
         <div class="user-header">
-            <h1 class="user-title">MCA 2025</h1>
+            <h1 class="user-title">Marmetian's Choice Awards - 2025</h1>
             <button class="btn btn-secondary" id="userLogout">Logout</button>
         </div>
         
