--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,8 +114,14 @@
     <!-- User Section -->
     <div id="user-dashboard" class="user-container hidden">
         <div class="user-header">
-            <h1 class="user-title">Marmetian's Choice Awards - 2025</h1>
-            <button class="btn btn-secondary" id="userLogout">Logout</button>
+            <div class="header-content">
+                <div class="logo">
+                    <img src="assets/images/logo-square.png" alt="MCA Logo">
+                </div>
+                <h1 class="user-title">Marmetian's Choice Awards - 2025</h1>
+                <button class="btn btn-secondary" id="userLogout">Logout</button>
+            </div>
+            <div class="header-line"></div>
         </div>
         
         <div class="voting-container">
@@ -132,6 +138,59 @@
 
     <!-- Toast Container -->
     <div id="toastContainer" class="toast-container"></div>
+
+    <style>
+        .user-header {
+            padding: 20px 0;
+        }
+        
+        .header-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .logo {
+            width: 50px;
+            height: 50px;
+        }
+
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+        .header-line {
+            height: 1px;
+            background: rgba(255, 255, 255, 0.2);
+            margin-top: 20px;
+        }
+
+        .user-title {
+            color: #fff;
+            font-size: 24px;
+            margin: 0;
+        }
+
+        #userLogout {
+            background: transparent;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            color: white;
+            padding: 8px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        #userLogout:hover {
+            border-color: white;
+            background: rgba(255, 255, 255, 0.1);
+        }
+    </style>
 
     <script src="assets/js/app.js"></script>
     <script src="assets/js/auth.js"></script>
