--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,7 +118,9 @@
                 <div class="logo">
                     <img src="assets/images/logo-square.png" alt="MCA Logo">
                 </div>
-                <h1 class="user-title">Marmetian's Choice Awards - 2025</h1>
+                <div class="title-container">
+                    <h1 class="user-title">Marmetian's Choice Awards - 2025</h1>
+                </div>
                 <button class="btn btn-secondary" id="userLogout">Logout</button>
             </div>
             <div class="header-line"></div>
@@ -142,6 +144,9 @@
     <style>
         .user-header {
             padding: 20px 0;
+            background: #000;
+            position: relative;
+            z-index: 10;
         }
         
         .header-content {
@@ -151,11 +156,20 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
+            position: relative;
+        }
+
+        .title-container {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
         }
 
         .logo {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
+            z-index: 1;
         }
 
         .logo img {
@@ -168,12 +182,14 @@
             height: 1px;
             background: rgba(255, 255, 255, 0.2);
             margin-top: 20px;
+            width: 100%;
         }
 
         .user-title {
             color: #fff;
             font-size: 24px;
             margin: 0;
+            white-space: nowrap;
         }
 
         #userLogout {
@@ -184,11 +200,18 @@
             border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s ease;
+            z-index: 1;
         }
 
         #userLogout:hover {
             border-color: white;
             background: rgba(255, 255, 255, 0.1);
+        }
+
+        .voting-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 40px 20px;
         }
     </style>
 
