--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,9 @@
                 <div class="form-group">
                     <label for="registerPassword">Password</label>
                     <input type="password" id="registerPassword" placeholder="Create a password" required>
+                    <small class="password-hint" style="display: block; color: #666; font-size: 0.75rem; margin-top: 0.25rem;">
+                        Password must contain at least one uppercase letter (A-Z), one number (0-9), and one special character (@$!%*?&)
+                    </small>
                 </div>
                 <button type="submit" class="btn btn-primary" style="width: 100%;">Register</button>
                 <div class="auth-switch">
