--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,9 @@
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
                     <input type="password" id="loginPassword" placeholder="Enter your password" required>
+                    <small class="password-hint" style="display: block; color: #666; font-size: 0.75rem; margin-top: 0.25rem;">
+                        Password must contain at least one uppercase letter (A-Z), one number (0-9), and one special character (@$!%*?&)
+                    </small>
                 </div>
                 <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
                 <div class="auth-switch">
