--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,14 +174,16 @@
         }
 
         .logo {
+            display: flex;
+            align-items: center;
             width: 80px;
             height: 80px;
             z-index: 1;
         }
 
         .logo img {
-            width: 100%;
-            height: 100%;
+            width: 130px;
+            height: 120px;
             object-fit: contain;
         }
 
